Last minute bug submitted.
All the bugged squashed.
some small css work around.

--- a/css/film.css
+++ b/css/film.css
@@ -1,3 +1,13 @@
+.overlay {
+    background-color: rgba(102, 102, 102, 0.3);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
 .film-wrapper {
     cursor: pointer;
     margin: 0.6%;
@@ -114,7 +124,6 @@
     padding: 1px;
     height: 18px;
 }
-
 
 .ui-dialog .ui-dialog-titlebar-close:hover {
     background-color: black;
